# casual-games-project-sdl2-pong

./: CMakeLists.txt  README.md  ball.hpp  clean.sh  main.cpp  note.cpp  paddle.hpp  pong.cpp  pong.hpp
